--- a/style.css
+++ b/style.css
@@ -1,30 +1,83 @@
 *{
     transition: width 0.2s, height 0.2s, transform 0.2s;
+    margin: 0;
 }
 
 body{
     background-color: black;
     font-family: "Funnel Display", sans-serif;
-    padding: 8%;
 }
 
+header{
+    color: white;
+}
 
-.header {
+button:hover{
+    filter: brightness(75%);
+}
+
+.header_part1 {
     display: flex;
     align-items: center;
     justify-content:space-between;
 }
+.header_part2 {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-direction: column;
+    height: 800px;
+}
+
+.header_part2 > h1, .header_part2 > h2, .header_part2 > div {
+    margin-bottom: 20px;
+    text-align: center;
+    width: 700px;
+}
+.header_part2 > h1{
+    font-size: 4rem;
+    font-weight: 1000;
+    
+}
+
+.second_input{
+    margin: 0;
+    height: 70px;
+    width: 250px;
+}
+
+.second_input > input {
+    background-color: black;
+    color: white;
+    border: 1px solid grey;
+    width: 70%;
+    height: 100%;
+    font-size: 20px;
+}
+
+.second_input > button {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    width: 25%;
+    height: 100%;
+    font-size: 20px;
+}
 
 .header_input{
     margin: 0;
-    height: 20px;
-    transform: scale(2,2);
+    height: 50px;
+    width: 250px;
 }
 
 .header_input > select {
     background-color: black;
     color: white;
     border: 1px solid grey;
+    width: 50%;
+    height: 100%;
+    font-size: 20px;
 }
 
 .header_input > button {
@@ -32,6 +85,9 @@ body{
     color: white;
     border: none;
     border-radius: 5px;
+    width: 45%;
+    height: 80%;
+    font-size: 20px;
 }
 
 .main{
@@ -40,6 +96,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
 
 .main > div {
@@ -127,21 +184,25 @@ body{
     row-gap: 10px;
 }
 
-.main >div:nth-child(4) > div {
+.main > div:nth-child(4) > div {
     background-color: rgb(44, 44, 44);
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+.main > div:nth-child(4) > div:hover {
+    filter: brightness(125%);
+}
+
 .main > div:nth-child(4) > div > div {
-    padding: 30px;
+    padding: 20px;
     font-size: xx-large;
 }
 
 .mini_tag_container{
     background-image: linear-gradient(to right, rgb(41, 5, 60), rgb(7, 6, 68));
-    padding-left: 50px;
+    padding: 20px;
     border-radius: 20px;
     width: 90%;
     display: flex;
