--- a/style.css
+++ b/style.css
@@ -313,45 +313,7 @@ div{
     }
     .main > div:nth-child(4) > div > div {
         font-size: x-large;
-    }
+    }}
     
 
-header{
-    display: flex;
-    justify-content: space-between;
-    
-}
-#languageSelect{
-    position: relative;
-    left: 280px;
-    height: 5em;
 
-}
-#signIn{
-    background-color: red;
-    border-radius: 10px;
-    height: 5em;
-}
-#one{
-    margin-top: 200px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-    
-}
-#lineTwo{
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    vertical-align: top;
-    
-}
-
-body{
-    background-color: black;
-}
-}
