--- a/style.css
+++ b/style.css
@@ -67,8 +67,9 @@ button:hover{
     background-color: black;
     color: white;
     border: 1px solid grey;
+    border-radius: 5px;
     width: 70%;
-    height: 100%;
+    height: 95%;
     font-size: 20px;
 }
 
@@ -106,14 +107,16 @@ button:hover{
     margin: 0;
     height: 50px;
     width: 250px;
+    border-radius: 5px;
 }
 
 .header_input > select {
     background-color: black;
     color: white;
     border: 1px solid grey;
+    border-radius: 5px;
     width: 50%;
-    height: 100%;
+    height: 80%;
     font-size: 20px;
 }
 
@@ -316,4 +319,8 @@ div{
     }}
     
 
+#links{
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0,1fr));
 
+}
