--- a/style.css
+++ b/style.css
@@ -82,6 +82,13 @@ button:hover{
     height: 100%;
     font-size: 20px;
 }
+
+.third_input{
+    position: relative;
+    left: 10%;
+    padding-bottom: 30px;
+}
+
 .third_input > input {
     background-color: black;
     color: white;
@@ -90,6 +97,7 @@ button:hover{
     width: 70%;
     height: 100%;
     font-size: 20px;
+    
 }
 
 
@@ -98,7 +106,7 @@ button:hover{
     color: white;
     border: none;
     border-radius: 5px;
-    width: 25%;
+    width: 15%;
     height: 100%;
     font-size: 20px;
 }
@@ -119,6 +127,7 @@ button:hover{
     height: 80%;
     font-size: 20px;
 }
+
 
 .header_input > button {
     background-color: red;
